--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 <img src="https://source.unsplash.com/1600x500/?shopping,ecommerce" alt="">
             </div>
 
+
+            <input type="text">
+            <br>
+            <button>Click me Baby!!!</button>
             <div class="card">
                 <h2 class="my-2">Join the cricket fun</h2>
                 <div class="cards">
