--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
     <footer class="flex-all-center">
         <p>Copyright &copy; MyCart.com </p>
     </footer>
+    <button>New style button</button>
 </body>
 
 </html>
