--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
     <footer class="flex-all-center">
         <p>Copyright &copy; MyCart.com </p>
     </footer>
-</body>
+    <h2>github website</h2>
 
 </html>
