--- a/index.html
+++ b/index.html
@@ -257,10 +257,11 @@
             </div>
         </div>
     </main>
+    <h1>new fetures</h1>
+    <button>New style button</button>
     <footer class="flex-all-center">
         <p>Copyright &copy; MyCart.com </p>
     </footer>
-    <button>New style button</button>
 </body>
 
 </html>
